--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Thu Jun 22 2023 12:39:19 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Mon Jun 26 2023 14:21:10 GMT+0000 (Coordinated Universal Time)  -->
 <html
   data-wf-page="6479f17239288397fee6d346"
   data-wf-site="6479f17139288397fee6d249"
@@ -851,6 +851,127 @@
           </div>
         </div>
         <div class="div-block"></div>
+        <div
+          class="steps-container step-and-4 left-for-mobile-step-4 w-container"
+        >
+          <div class="w-layout-grid grid-2-columns-step-1 _0-64fr---1fr">
+            <div
+              id="w-node-_03c90a2c-7ba5-2672-4ad5-9f6278176ad1-fee6d346"
+              data-w-id="03c90a2c-7ba5-2672-4ad5-9f6278176ad1"
+              style="
+                -webkit-transform: translate3d(0, 0, 0) scale3d(0.97, 0.97, 1)
+                  rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);
+                -moz-transform: translate3d(0, 0, 0) scale3d(0.97, 0.97, 1)
+                  rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);
+                -ms-transform: translate3d(0, 0, 0) scale3d(0.97, 0.97, 1)
+                  rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);
+                transform: translate3d(0, 0, 0) scale3d(0.97, 0.97, 1)
+                  rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);
+                opacity: 0;
+              "
+              class="container-inner-480px left step-1-and-3"
+            >
+              <h4 class="step-2-flat">Step 2</h4>
+              <div class="line-header"></div>
+              <h2>Customized risk level monitoring for each protocol</h2>
+              <div class="mg-top-40px">
+                <div class="button-row">
+                  <a
+                    data-w-id="03c90a2c-7ba5-2672-4ad5-9f6278176ad9"
+                    href="#"
+                    class="button-primary w-button"
+                    >Get started<span
+                      style="
+                        -webkit-transform: translate3d(0px, 0px, 0)
+                          scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0)
+                          skew(0, 0);
+                        -moz-transform: translate3d(0px, 0px, 0)
+                          scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0)
+                          skew(0, 0);
+                        -ms-transform: translate3d(0px, 0px, 0) scale3d(1, 1, 1)
+                          rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);
+                        transform: translate3d(0px, 0px, 0) scale3d(1, 1, 1)
+                          rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);
+                      "
+                      class="icon-font arrow-button"
+                      ></span
+                    ></a
+                  >
+                  <div class="button-row-last">
+                    <a
+                      data-w-id="03c90a2c-7ba5-2672-4ad5-9f6278176ade"
+                      href="/doc/derisk"
+                      target="_blank"
+                      class="button-secondary w-button"
+                      >Download doc<span
+                        style="
+                          -webkit-transform: translate3d(0px, 0px, 0)
+                            scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0)
+                            skew(0, 0);
+                          -moz-transform: translate3d(0px, 0px, 0)
+                            scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0)
+                            skew(0, 0);
+                          -ms-transform: translate3d(0px, 0px, 0)
+                            scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0)
+                            skew(0, 0);
+                          transform: translate3d(0px, 0px, 0) scale3d(1, 1, 1)
+                            rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);
+                        "
+                        class="icon-font arrow-button"
+                        ></span
+                      ></a
+                    >
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div
+              data-w-id="03c90a2c-7ba5-2672-4ad5-9f6278176ae2"
+              style="
+                -webkit-transform: translate3d(0, 0, 0) scale3d(0.97, 0.97, 1)
+                  rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);
+                -moz-transform: translate3d(0, 0, 0) scale3d(0.97, 0.97, 1)
+                  rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);
+                -ms-transform: translate3d(0, 0, 0) scale3d(0.97, 0.97, 1)
+                  rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);
+                transform: translate3d(0, 0, 0) scale3d(0.97, 0.97, 1)
+                  rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);
+                opacity: 0;
+              "
+              class="w-layout-grid grid-2-columns-step-1 features-cards-top-step-3"
+            >
+              <a
+                id="w-node-_03c90a2c-7ba5-2672-4ad5-9f6278176ae3-fee6d346"
+                data-w-id="03c90a2c-7ba5-2672-4ad5-9f6278176ae3"
+                style="background-color: rgb(255, 255, 255)"
+                href="#"
+                class="card feature step-1-and-3 w-inline-block"
+              >
+                <div
+                  style="background-color: rgb(8, 8, 8)"
+                  class="line-header _40px"
+                ></div>
+                <p style="color: rgb(87, 87, 87)" class="card-paragraph">
+                  DeRisk provides customized simulations for each protocol on
+                  the impact of price movement on the profitability to
+                  liquidators.
+                </p>
+                <p style="color: rgb(87, 87, 87)" class="card-paragraph">
+                  <strong
+                    ><em style="color: rgb(87, 87, 87)" class="card-paragraph"
+                      >“Why should I trust your risk assessment over mine?”</em
+                    ></strong
+                  ><em style="color: rgb(87, 87, 87)" class="card-paragraph"
+                    ><br />In the paid version we will share the results and
+                    methodology used, and we can fine tune the parameters to fit
+                    your assessment methods. Our team has vast experience in
+                    data science and financial modeling.</em
+                  >
+                </p>
+              </a>
+            </div>
+          </div>
+        </div>
         <div class="steps-container step-2-and-4 w-container">
           <div class="w-layout-grid grid-david david-grid">
             <div id="w-node-_4a849cb7-a056-17d8-3a17-50ca0d797845-fee6d346">
@@ -1083,19 +1204,7 @@
         >
           <div class="w-layout-grid grid-2-columns-step-1 _0-64fr---1fr">
             <div
-              id="w-node-_03c90a2c-7ba5-2672-4ad5-9f6278176ad1-fee6d346"
-              data-w-id="03c90a2c-7ba5-2672-4ad5-9f6278176ad1"
-              style="
-                -webkit-transform: translate3d(0, 0, 0) scale3d(0.97, 0.97, 1)
-                  rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);
-                -moz-transform: translate3d(0, 0, 0) scale3d(0.97, 0.97, 1)
-                  rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);
-                -ms-transform: translate3d(0, 0, 0) scale3d(0.97, 0.97, 1)
-                  rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);
-                transform: translate3d(0, 0, 0) scale3d(0.97, 0.97, 1)
-                  rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);
-                opacity: 0;
-              "
+              id="w-node-fd5671a3-f840-4346-b284-afbf2f7af455-fee6d346"
               class="container-inner-480px left step-1-and-3"
             >
               <h4>Step 4</h4>
@@ -1103,48 +1212,15 @@
               <h2>Insurance on risky loans</h2>
               <div class="mg-top-40px">
                 <div class="button-row">
-                  <a
-                    data-w-id="03c90a2c-7ba5-2672-4ad5-9f6278176ad9"
-                    href="#"
-                    class="button-primary w-button"
-                    >Get started<span
-                      style="
-                        -webkit-transform: translate3d(0px, 0px, 0)
-                          scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0)
-                          skew(0, 0);
-                        -moz-transform: translate3d(0px, 0px, 0)
-                          scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0)
-                          skew(0, 0);
-                        -ms-transform: translate3d(0px, 0px, 0) scale3d(1, 1, 1)
-                          rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);
-                        transform: translate3d(0px, 0px, 0) scale3d(1, 1, 1)
-                          rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);
-                      "
-                      class="icon-font arrow-button"
-                      ></span
-                    ></a
+                  <a href="#" class="button-primary w-button"
+                    >Get started<span class="icon-font arrow-button"></span></a
                   >
                   <div class="button-row-last">
                     <a
-                      data-w-id="03c90a2c-7ba5-2672-4ad5-9f6278176ade"
                       href="/doc/derisk"
                       target="_blank"
                       class="button-secondary w-button"
-                      >Download doc<span
-                        style="
-                          -webkit-transform: translate3d(0px, 0px, 0)
-                            scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0)
-                            skew(0, 0);
-                          -moz-transform: translate3d(0px, 0px, 0)
-                            scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0)
-                            skew(0, 0);
-                          -ms-transform: translate3d(0px, 0px, 0)
-                            scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0)
-                            skew(0, 0);
-                          transform: translate3d(0px, 0px, 0) scale3d(1, 1, 1)
-                            rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);
-                        "
-                        class="icon-font arrow-button"
+                      >Download doc<span class="icon-font arrow-button"
                         ></span
                       ></a
                     >
@@ -1153,45 +1229,28 @@
               </div>
             </div>
             <div
-              data-w-id="03c90a2c-7ba5-2672-4ad5-9f6278176ae2"
-              style="
-                -webkit-transform: translate3d(0, 0, 0) scale3d(0.97, 0.97, 1)
-                  rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);
-                -moz-transform: translate3d(0, 0, 0) scale3d(0.97, 0.97, 1)
-                  rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);
-                -ms-transform: translate3d(0, 0, 0) scale3d(0.97, 0.97, 1)
-                  rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);
-                transform: translate3d(0, 0, 0) scale3d(0.97, 0.97, 1)
-                  rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);
-                opacity: 0;
-              "
               class="w-layout-grid grid-2-columns-step-1 features-cards-top-step-3"
             >
               <a
-                id="w-node-_03c90a2c-7ba5-2672-4ad5-9f6278176ae3-fee6d346"
-                data-w-id="03c90a2c-7ba5-2672-4ad5-9f6278176ae3"
-                style="background-color: rgb(255, 255, 255)"
+                id="w-node-fd5671a3-f840-4346-b284-afbf2f7af467-fee6d346"
                 href="#"
                 class="card feature step-1-and-3 w-inline-block"
               >
-                <div
-                  style="background-color: rgb(8, 8, 8)"
-                  class="line-header _40px"
-                ></div>
-                <p style="color: rgb(87, 87, 87)" class="card-paragraph">
+                <div class="line-header _40px"></div>
+                <p class="card-paragraph">
                   The insurance is a long put/call option, the option sustains a
                   high enough value of collateral, so that the borrowed capital
                   is covered.
                 </p>
-                <p style="color: rgb(87, 87, 87)" class="card-paragraph">
+                <p class="card-paragraph">
                   - Transparent pricing (% on top of oracle price)<br />- It can
                   be vis smart contract or by RFQ on a case by case basis
                 </p>
-                <p style="color: rgb(87, 87, 87)" class="card-paragraph">
+                <p class="card-paragraph">
                   <strong
-                    ><em style="color: rgb(87, 87, 87)" class="card-paragraph"
+                    ><em class="card-paragraph"
                       >“For how long are the options valid?”<br /></em></strong
-                  ><em style="color: rgb(87, 87, 87)" class="card-paragraph"
+                  ><em class="card-paragraph"
                     >We have estimated a typical duration of 1 month, but we can
                     agree otherwise.</em
                   >
