fix: correct doc url at the bottom

--- a/public/index.html
+++ b/public/index.html
@@ -1430,7 +1430,7 @@
                 <div class="button-row-last">
                   <a
                     data-w-id="478b1f6b-0e7a-cf4f-9728-6ffdd8d2e77e"
-                    href="https://docs.google.com/document/d/1aFkN2eRUyS3kyiEMEJKLAjLumoN-yH9FsM7fPAxYk-8/export?format=pdf"
+                    href="doc/derisk"
                     class="button-secondary button-white w-button"
                     >Download doc<span
                       style="
