--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
                         rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);
                     " class="icon-font arrow-button"></span></a>
               <div class="button-row-last">
-                <a data-w-id="b5d40cbc-e56e-b51d-21ad-fe8af4d7ed69" href="/doc/derisk" target="_blank"
+                <a data-w-id="b5d40cbc-e56e-b51d-21ad-fe8af4d7ed69" href="/doc/derisk.pdf" target="_blank"
                   class="button-secondary w-button">Download doc<span style="
                         -webkit-transform: translate3d(0px, 0px, 0)
                           scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0)
